dates in versions

--- a/changelog
+++ b/changelog
@@ -1,8 +1,12 @@
 # v0.2.0
 
+*Released:* 2016-11-23
+
 - Umstrukturierung Open-TT -> TT-Schiri
 
 # v0.1.0
+
+*Released:* 2016-11-23
 
 - Ideen
 - vor der Umstrukturierung zu TT-Schiri
